--- a/src/components/Task.module.scss
+++ b/src/components/Task.module.scss
@@ -3,11 +3,17 @@
   display: flex;
   width: 26rem;
   min-width: 26rem;
-  min-height: 3rem; //
+  min-height: 3rem;
   background-color: white;
   border-radius: 5px;
   align-items: center;
   justify-content: space-between;
+
+  .inputEdit {
+    width: 26rem;
+    min-height: 3rem;
+    border-radius: 5px;
+  }
 
   button {
     width: 2rem;
@@ -25,5 +31,19 @@
   }
   .deleteButton {
     background-color: rgba(253, 103, 86);
+  }
+}
+
+.buttonControl {
+  width: 26rem;
+  margin: 0 auto;
+  display: flex;
+  border-radius: 5px;
+
+  button {
+    width: 6rem;
+    height: 1.5rem;
+    margin: 0.1rem;
+    border-radius: 4px;
   }
 }
