--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -1,6 +1,18 @@
+.allWrapper {
+  margin: 2rem auto;
+  width: 60rem;
+  background-color: rgb(241, 244, 249);
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 8px;
+  padding: 1rem;
+}
+
 .wrapper {
   display: flex;
   margin: 0 auto;
   width: 30rem;
   justify-content: space-between;
+}
+
+.taskWrapper {
+  margin: 5rem;
 }
