--- a/src/components/TaskInput.module.scss
+++ b/src/components/TaskInput.module.scss
@@ -6,14 +6,22 @@
 
   input {
     font-size: 1.3rem;
-    width: 20rem;
+    width: 40rem;
     border: 0px solid;
-    border-bottom: 1px solid;
+    border: 1px solid;
     padding-bottom: 0.5rem;
+    border-radius: 5px;
     background-color: rgb(241, 244, 249);
+    border-color: black;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+    &:focus {
+      border-color: #3498db;
+      outline: none;
+    }
   }
 
   button {
+    cursor: pointer;
     font-size: 1.3rem;
     margin: 0 0.5rem;
     padding: 0.5rem 2rem;
@@ -21,5 +29,24 @@
     border-radius: 5px;
     border-style: none;
     color: white;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    &:hover {
+      background-color: rgba(16, 108, 214, 0.808);
+    }
+  }
+}
+.validation {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  color: rgb(248, 163, 163);
+  margin-left: 6rem;
+  margin-top: -3rem;
+  text-shadow: 1px 1px 2px pink;
+
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  &.visible {
+    opacity: 1;
   }
 }
