--- a/src/components/Task.module.scss
+++ b/src/components/Task.module.scss
@@ -50,7 +50,17 @@
   button {
     width: 6rem;
     height: 1.5rem;
-    margin: 0.1rem;
+    margin: 1rem 11rem 0rem -10.5rem;
     border-radius: 4px;
   }
+}
+.validation {
+  font-size: 1rem;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  color: rgb(248, 163, 163);
+  margin-left: 6.4rem;
+  bottom: 5.1rem;
+  text-shadow: 1px 1px 2px pink;
 }
