--- a/src/components/AddTaskInput.module.scss
+++ b/src/components/AddTaskInput.module.scss
@@ -5,7 +5,7 @@
   align-items: center;
 
   input {
-    font-size: 1.3rem;
+    font-size: 1.25rem;
     width: 40rem;
     border: 0px solid;
     border: 1px solid;
@@ -22,16 +22,16 @@
 
   button {
     cursor: pointer;
-    font-size: 1.3rem;
+    font-size: 1.25rem;
     margin: 0 0.5rem;
     padding: 0.5rem 2rem;
-    background-color: rgba(42, 132, 235, 0.808);
+    background-color: #2a84eb;
     border-radius: 5px;
     border-style: none;
     color: white;
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
     &:hover {
-      background-color: rgba(16, 108, 214, 0.808);
+      background-color: #2a84eb;
     }
   }
 }
