--- a/src/components/TodoItem.module.scss
+++ b/src/components/TodoItem.module.scss
@@ -5,7 +5,7 @@
   min-width: 26rem;
   min-height: 3rem;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 8px;
-  background-color: rgb(241, 244, 249);
+  background-color: #f1f4f9;
   border-radius: 5px;
   align-items: center;
   justify-content: space-between;
@@ -38,10 +38,10 @@
   }
 
   .editButton {
-    background-color: rgba(42, 132, 235, 0.808);
+    background-color: #2a84eb;
   }
   .deleteButton {
-    background-color: rgba(253, 103, 86);
+    background-color: #fd6756;
   }
 }
 
@@ -60,10 +60,9 @@
 }
 .validation {
   font-size: 1rem;
-  position: absolute;
   display: flex;
   justify-content: center;
-  color: rgb(248, 163, 163);
+  color: #f8a3a3;
   margin-left: 6.4rem;
   bottom: 5.1rem;
   text-shadow: 1px 1px 2px pink;
