--- a/src/components/TodoItem.module.scss
+++ b/src/components/TodoItem.module.scss
@@ -25,39 +25,13 @@
     min-height: 3rem;
     border-radius: 5px;
   }
-
-  button {
-    width: 2rem;
-    height: 2rem;
-    margin: 0.5rem;
-    border-radius: 4px;
-    border-style: none;
-    img {
-      width: 1rem;
-    }
-  }
-
-  .editButton {
-    background-color: #2a84eb;
-  }
-  .deleteButton {
-    background-color: #fd6756;
-  }
 }
-
 .buttonControl {
-  width: 26rem;
-  margin: 0 auto;
   display: flex;
-  border-radius: 5px;
-
-  button {
-    width: 6rem;
-    height: 1.5rem;
-    margin: 1rem 11rem 0rem -10.5rem;
-    border-radius: 4px;
-  }
+  margin-left: 6.5rem;
+  gap: 0.5rem;
 }
+
 .validation {
   font-size: 1rem;
   display: flex;
