--- a/src/components/TodoItem.module.scss
+++ b/src/components/TodoItem.module.scss
@@ -21,15 +21,18 @@
     color: gray;
   }
   .inputEdit {
-    width: 47rem;
+    border: 1px solid;
+    width: 40rem;
     min-height: 3rem;
     border-radius: 5px;
+    background-color: rgb(241, 244, 249);
+    border-color: black;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+    &:focus {
+      border-color: #3498db;
+      outline: none;
+    }
   }
-}
-.buttonControl {
-  display: flex;
-  margin-left: 6.5rem;
-  gap: 0.5rem;
 }
 
 .validation {
