--- a/src/components/TodoItem.module.scss
+++ b/src/components/TodoItem.module.scss
@@ -1,18 +1,18 @@
 .control {
   margin: 1rem auto;
   display: flex;
-  width: 47rem;
-  min-width: 26rem;
-  min-height: 3rem;
+  width: 45rem;
+  height: 4rem;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 8px;
   background-color: #f1f4f9;
   border-radius: 5px;
   align-items: center;
-  justify-content: space-between;
+  justify-content: left;
+  padding-right: 2rem;
 
   .titleWrapper {
-    width: 39rem;
-    max-width: 100%;
+    flex: 1;
+    width: 40rem;
     word-break: break-word;
   }
 
@@ -21,9 +21,11 @@
     color: gray;
   }
   .inputEdit {
+    width: 47rem;
+    height: 100%;
+    max-height: 100%;
+    font-size: 1.25rem;
     border: 1px solid;
-    width: 40rem;
-    min-height: 3rem;
     border-radius: 5px;
     background-color: rgb(241, 244, 249);
     border-color: black;
@@ -43,4 +45,9 @@
   margin-left: 6.4rem;
   bottom: 5.1rem;
   text-shadow: 1px 1px 2px pink;
+}
+
+.iconDiv {
+  width: 5rem;
+  display: flex;
 }
