--- a/src/components/TodoItem.module.scss
+++ b/src/components/TodoItem.module.scss
@@ -1,14 +1,21 @@
 .control {
+  box-sizing: content-box;
   margin: 1rem auto;
   display: flex;
   width: 45rem;
-  height: 4rem;
+  height: 4.5rem;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 8px;
   background-color: #f1f4f9;
   border-radius: 5px;
   align-items: center;
   justify-content: left;
   padding-right: 2rem;
+
+  .buttonControl {
+    display: flex;
+    gap: 0.5rem;
+    margin: 0.25rem;
+  }
 
   .titleWrapper {
     flex: 1;
@@ -21,8 +28,9 @@
     color: gray;
   }
   .inputEdit {
-    width: 47rem;
-    height: 100%;
+    width: 40rem;
+    height: 2.25rem;
+    margin-top: 1.25rem;
     max-height: 100%;
     font-size: 1.25rem;
     border: 1px solid;
@@ -35,19 +43,4 @@
       outline: none;
     }
   }
-}
-
-.validation {
-  font-size: 1rem;
-  display: flex;
-  justify-content: center;
-  color: #f8a3a3;
-  margin-left: -35rem;
-  bottom: 5.1rem;
-  text-shadow: 1px 1px 2px pink;
-}
-
-.iconDiv {
-  width: 5rem;
-  display: flex;
 }
