--- a/src/components/SideNavigation.module.scss
+++ b/src/components/SideNavigation.module.scss
@@ -6,8 +6,8 @@
     }
 
     .ant-menu-item:hover {
-      background-color: #e6f7ff !important;
-      color: #1890ff !important;
+      background-color: #1890ff !important;
+      color: white !important;
     }
 
     .ant-menu-item-selected {
